# OpenGLExperiments

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
CameraControl/: CMakeLists.txt  vcpkg.json
CameraControl/lib/camera_control/include/: mesh.h  program.h
CameraControl/lib/camera_control/src/: mesh.cpp
CameraControl/lib/lighting/include/: error.h  program.h
CameraControl/shaders/: fragment.glsl
CameraControl/src/: main.cpp
CameraControlLightning/: CMakeLists.txt
CameraControlLightning/lib/camera_control/include/: error.h  program.h
CameraControlLightning/lib/camera_control/src/: program.cpp
CameraControlLightning/shaders/: fragment.glsl  fragment_lighting_source.glsl  vertex.glsl
CameraControlLightning/src/: main.cpp
CameraControlTextures/: CMakeLists.txt
CameraControlTextures/lib/camera_control_textures/include/: error.h  mesh.h  program.h
CameraControlTextures/lib/camera_control_textures/src/: program.cpp
CameraControlTextures/shaders/: fragment.glsl  vertex.glsl
CameraControlTextures/src/: main.cpp
JonarkTextRenderer/: CMakeLists.txt  README.md
JonarkTextRenderer/lib/include/jtr/: font.h  graphic_context.h  mesh.h  program.h  text.h  texture.h  vertex_array_object.h
JonarkTextRenderer/shaders/: fragment.glsl  vertex.glsl
JonarkTextRenderer/src/: font.cpp  graphic_context.cpp  main.cpp  mesh.cpp  program.cpp  texture.cpp  vertex_array_object.cpp
Lighting/: CMakeLists.txt  vcpkg.json
Lighting/lib/lighting/include/: mesh.h  program.h
Lighting/lib/lighting/src/: mesh.cpp  program.cpp
Lighting/shaders/: fragment.glsl  vertex.glsl
Lighting/src/: main.cpp
MeshesModelLoading/: CMakeLists.txt  main.cpp
MeshesModelLoading/models/: spider.mtl
MeshesModelLoading/shaders/: fragment.glsl
ModelLoading/: CMakeLists.txt  main.cpp  stb_image.h
ModelLoading/shaders/: vertex.glsl
ModelLoading2/: .gitignore  CMakeLists.txt  vcpkg.json
ModelLoading2/lib/camera_control/include/: program.h
ModelLoading2/lib/model_loading/include/: error.h  mesh.h  model.h  program.h
ModelLoading2/lib/model_loading/src/: mesh.cpp  model.cpp  program.cpp
ModelLoading2/shaders/: fragment.glsl  vertex.glsl
ModelLoading2/src/: main.cpp
ProjectionViewModel/: CMakeLists.txt  main.cpp
ProjectionViewModel/shaders/: fragment.glsl  vertex.glsl
ShadersCompilation/: CMakeLists.txt  main.cpp  opengl_experiments.cpp
ShadersCompilation/shaders/: fragment.glsl
Square/: CMakeLists.txt  main.cpp
StartupCompilation/: CMakeLists.txt  main.cpp  opengl_experiments.cpp
TextRendering/: CMakeLists.txt  main2.cpp  main3.cpp  main_mine.cpp  vcpkg.json
TextRendering/lib/model_loading/include/: error.h  fonts.h  mesh.h  model.h  program.h
TextRendering/lib/model_loading/src/: mesh.cpp  model.cpp  program.cpp
TextRendering/shaders/: fragment.glsl  vertex.glsl
TextRendering/src/: main.cpp
Textures/: CMakeLists.txt  main.cpp
Textures/shaders/: fragment.glsl  vertex.glsl
Transformations/: CMakeLists.txt  main.cpp
Transformations/shaders/: vertex.glsl
Triangle/: CMakeLists.txt  main.cpp  opengl_experiments.cpp
Triangle/shaders/: vertex.glsl
TwoFaces/: CMakeLists.txt  main.cpp
libs/gl_strings/: gl_strings.cpp  gl_strings.h
