cmake_minimum_required(VERSION 3.11)

project(OpenGLExperiments)

add_subdirectory(StartupCompilation)
add_subdirectory(ShadersCompilation)
add_subdirectory(Triangle)
add_subdirectory(Square)
add_subdirectory(Transformations)
add_subdirectory(Textures)
add_subdirectory(ProjectionViewModel)
add_subdirectory(TwoFaces)
